Blender 2.75a crashes after loading a .blend file dozen or more times (crash in preview code, still running while loading new file?) #45496

Closed
opened 2015-07-19 15:42:43 +02:00 by Peter Quiring · 10 comments

System Information
Windows 7 SP1 64bit
Radeon HD 5400 1GB

Blender Version
Broken: 2.75a
Worked: 2.74

Short description of error
Opening .blend file repeatedly crashes blender.

Exact steps for others to reproduce the error
Repeated open .blend file and after 10-20 loads blender crashes.
Was not an issue in 2.74

Memory leak?

**System Information** Windows 7 SP1 64bit Radeon HD 5400 1GB **Blender Version** Broken: 2.75a Worked: 2.74 **Short description of error** Opening .blend file repeatedly crashes blender. **Exact steps for others to reproduce the error** Repeated open .blend file and after 10-20 loads blender crashes. Was not an issue in 2.74 Memory leak?
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @pquiring

Added subscriber: @pquiring

Added subscriber: @mont29

Added subscriber: @mont29

Cannot confirm that here on linux. Please always attach a .blend file to help reproducing the issue (and check the issue still happens with latest build from our buildbot).

Also, if it was (heavy) memleak, you should be able to see it by following Blender's memsize in the task manager…

Cannot confirm that here on linux. Please always attach a .blend file to help reproducing the issue (and check the issue still happens with latest build from [our buildbot](https://builder.blender.org/download)). Also, if it was (heavy) memleak, you should be able to see it by following Blender's memsize in the task manager…
Author

I created a new .blend file with just the basic cube and it doesn't happen.
But if I load a file that was upgraded from 2.74 then it happens (any of the 50+ models I have seem to cause it).
I'll attach a sample that does it.
I checked if memory increased and it doesn't so it's not a memory leak (that was just a quick guess).

I tried with buildbot blender-2.75-23c7603-win64.zip (downloaded just now) and it still happens.

Also tried with the Linux build (buildbot same date as win64 above) and it took 26 loads before I got a SEG_FAULT.

armor.blend

I created a new .blend file with just the basic cube and it doesn't happen. But if I load a file that was upgraded from 2.74 then it happens (any of the 50+ models I have seem to cause it). I'll attach a sample that does it. I checked if memory increased and it doesn't so it's not a memory leak (that was just a quick guess). I tried with buildbot blender-2.75-23c7603-win64.zip (downloaded just now) and it still happens. Also tried with the Linux build (buildbot same date as win64 above) and it took 26 loads before I got a SEG_FAULT. [armor.blend](https://archive.blender.org/developer/F209149/armor.blend)
Author

Here is a crash message generated on Linux:

Blender 2.75 (sub 2), Commit date: 2015-07-18 23:53, Hash 23c7603

backtrace

./blender(BLI_system_backtrace+0x1d) [0x1a0991d]
./blender() [0x103c9a4]
./blender() [0x103cb81]
/lib/x86_64-linux-gnu/libc.so.6(+0x352f0) [0x7f81a32ff2f0]
./blender() [0x11c2ecc]
./blender(ED_preview_draw+0x226) [0x11c3d16]
./blender() [0x1398545]
./blender(ui_draw_but+0x7a6) [0x139ced6]
./blender(UI_block_draw+0x18e) [0x138349e]
./blender(UI_panels_draw+0x5e) [0x13abcae]
./blender(ED_region_panels+0x529) [0x1353d79]
./blender() [0x13cdf3b]
./blender(ED_region_do_draw+0xa06) [0x1352ce6]
./blender() [0x10585b4]
./blender(wm_draw_update+0x582) [0x1059b82]
./blender(WM_main+0x28) [0x1045078]
./blender(main+0x52c) [0x103f6ec]
/lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf0) [0x7f81a32eaa40]
./blender() [0xf414d1]

Here is a crash message generated on Linux: # Blender 2.75 (sub 2), Commit date: 2015-07-18 23:53, Hash 23c7603 # backtrace ./blender(BLI_system_backtrace+0x1d) [0x1a0991d] ./blender() [0x103c9a4] ./blender() [0x103cb81] /lib/x86_64-linux-gnu/libc.so.6(+0x352f0) [0x7f81a32ff2f0] ./blender() [0x11c2ecc] ./blender(ED_preview_draw+0x226) [0x11c3d16] ./blender() [0x1398545] ./blender(ui_draw_but+0x7a6) [0x139ced6] ./blender(UI_block_draw+0x18e) [0x138349e] ./blender(UI_panels_draw+0x5e) [0x13abcae] ./blender(ED_region_panels+0x529) [0x1353d79] ./blender() [0x13cdf3b] ./blender(ED_region_do_draw+0xa06) [0x1352ce6] ./blender() [0x10585b4] ./blender(wm_draw_update+0x582) [0x1059b82] ./blender(WM_main+0x28) [0x1045078] ./blender(main+0x52c) [0x103f6ec] /lib/x86_64-linux-gnu/libc.so.6(__libc_start_main+0xf0) [0x7f81a32eaa40] ./blender() [0xf414d1]

Uuuuuh! Got a crash here, but only on 40th reload!

Looks like an issue with preview rendering, Asan says:

ASAN:SIGSEGV
=================================================================
==23769==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000050 (pc 0x000002bb4fb3 bp 0x7ffeac0782b0 sp 0x7ffeac0780d0 T0)
    - 0 0x2bb4fb2 in ed_preview_draw_rect /home/i74700deb64/blender/__work__/src/source/blender/editors/render/render_preview.c:565
    - 1 0x2bb5891 in ED_preview_draw /home/i74700deb64/blender/__work__/src/source/blender/editors/render/render_preview.c:620
    - 2 0x278e3b4 in widget_draw_extra_mask /home/i74700deb64/blender/__work__/src/source/blender/editors/interface/interface_widgets.c:3362
    - 3 0x278f8a2 in ui_draw_but /home/i74700deb64/blender/__work__/src/source/blender/editors/interface/interface_widgets.c:3743
    - 4 0x268b74d in UI_block_draw /home/i74700deb64/blender/__work__/src/source/blender/editors/interface/interface.c:1383
    - 5 0x272d968 in UI_panels_draw /home/i74700deb64/blender/__work__/src/source/blender/editors/interface/interface_panel.c:1045
    - 6 0x2be481c in ED_region_panels /home/i74700deb64/blender/__work__/src/source/blender/editors/screen/area.c:1948
    - 7 0x1f65ab9 in buttons_main_area_draw /home/i74700deb64/blender/__work__/src/source/blender/editors/space_buttons/space_buttons.c:157
    - 8 0x2bd66c2 in ED_region_do_draw /home/i74700deb64/blender/__work__/src/source/blender/editors/screen/area.c:517
    - 9 0x1eeb4cc in wm_method_draw_triple /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_draw.c:640
    - 10 0x1eedb3e in wm_draw_update /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_draw.c:1047
    - 11 0x1eddfab in WM_main /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm.c:493
    - 12 0x1edbd03 in main /home/i74700deb64/blender/__work__/src/source/creator/creator.c:1929
    - 13 0x7feee9771b44 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x21b44)
    #14 0x1ed5efe  (/home/i74700deb64/blender/__work__/build_cmake_dbg/bin/blender+0x1ed5efe)

AddressSanitizer can not provide additional info.
SUMMARY: AddressSanitizer: SEGV /home/i74700deb64/blender/__work__/src/source/blender/editors/render/render_preview.c:565 ed_preview_draw_rect
==23769==ABORTING

Wild guess: render preview still using some code from previous file (which would mean issue is not related to reloading same file, it's more like quickly loading a new file while previews of previous one are not yet done). Just conjectures so far, this needs more investigation.

Uuuuuh! Got a crash here, but only on 40th reload! Looks like an issue with preview rendering, Asan says: ``` ASAN:SIGSEGV ================================================================= ==23769==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000050 (pc 0x000002bb4fb3 bp 0x7ffeac0782b0 sp 0x7ffeac0780d0 T0) - 0 0x2bb4fb2 in ed_preview_draw_rect /home/i74700deb64/blender/__work__/src/source/blender/editors/render/render_preview.c:565 - 1 0x2bb5891 in ED_preview_draw /home/i74700deb64/blender/__work__/src/source/blender/editors/render/render_preview.c:620 - 2 0x278e3b4 in widget_draw_extra_mask /home/i74700deb64/blender/__work__/src/source/blender/editors/interface/interface_widgets.c:3362 - 3 0x278f8a2 in ui_draw_but /home/i74700deb64/blender/__work__/src/source/blender/editors/interface/interface_widgets.c:3743 - 4 0x268b74d in UI_block_draw /home/i74700deb64/blender/__work__/src/source/blender/editors/interface/interface.c:1383 - 5 0x272d968 in UI_panels_draw /home/i74700deb64/blender/__work__/src/source/blender/editors/interface/interface_panel.c:1045 - 6 0x2be481c in ED_region_panels /home/i74700deb64/blender/__work__/src/source/blender/editors/screen/area.c:1948 - 7 0x1f65ab9 in buttons_main_area_draw /home/i74700deb64/blender/__work__/src/source/blender/editors/space_buttons/space_buttons.c:157 - 8 0x2bd66c2 in ED_region_do_draw /home/i74700deb64/blender/__work__/src/source/blender/editors/screen/area.c:517 - 9 0x1eeb4cc in wm_method_draw_triple /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_draw.c:640 - 10 0x1eedb3e in wm_draw_update /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm_draw.c:1047 - 11 0x1eddfab in WM_main /home/i74700deb64/blender/__work__/src/source/blender/windowmanager/intern/wm.c:493 - 12 0x1edbd03 in main /home/i74700deb64/blender/__work__/src/source/creator/creator.c:1929 - 13 0x7feee9771b44 in __libc_start_main (/lib/x86_64-linux-gnu/libc.so.6+0x21b44) #14 0x1ed5efe (/home/i74700deb64/blender/__work__/build_cmake_dbg/bin/blender+0x1ed5efe) AddressSanitizer can not provide additional info. SUMMARY: AddressSanitizer: SEGV /home/i74700deb64/blender/__work__/src/source/blender/editors/render/render_preview.c:565 ed_preview_draw_rect ==23769==ABORTING ``` Wild guess: render preview still using some code from previous file (which would mean issue is not related to reloading same file, it's more like quickly loading a new file while previews of previous one are not yet done). Just conjectures so far, this needs more investigation.
Bastien Montagne changed title from Blender 2.75a crashes after loading a .blend file dozen or more times to Blender 2.75a crashes after loading a .blend file dozen or more times (crash in preview code, still running while loading new file?) 2015-07-19 18:39:36 +02:00

yes, your backtrace looks similar to mine.

yes, your backtrace looks similar to mine.

This issue was referenced by ae00011956

This issue was referenced by ae00011956fc09266ea867857557536e97d1fffa

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#45496
No description provided.