Fix T45496: Crash loading file during preview

Regression from multi-view